# proyecto3

./: README.md  database.py  main.py  pyproject.toml  requirements.txt
models/: cliente.py  detalle_devolucion.py  detalle_venta.py  devolucion.py  inventario.py  precio_cliente.py  producto.py  proveedor.py  rol.py  usuario.py  venta.py
routers/: clientes.py  devoluciones.py  inventario.py  productos.py  proveedores.py  usuarios.py  ventas.py
