[project]
name = "api-ancisa"
version = "1.0.0"
description = "API REST para la gestión comercial de ANCISA S.A."
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]",
    "pydantic",
    "python-dotenv",
    "supabase",
    "email-validator"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "database.py",
    "models",
    "routers"
]

[tool.fastapi]
entrypoint = "main:app"